2011-10-07  Mario Sanchez Prada  <msanchez@igalia.com>

        [GTK] Don't expose objects with unknown role on GTK
        https://bugs.webkit.org/show_bug.cgi?id=69561

        Reviewed by Chris Fleizach.

        Ignore accessibility objects in accessibilityPlatformIncludesObject.

        Test: platform/gtk/accessibility/unknown-roles-not-exposed.html

        * accessibility/gtk/AccessibilityObjectAtk.cpp:
        (WebCore::AccessibilityObject::accessibilityPlatformIncludesObject):
        For unknown accessibility objects, return IgnoreObject.

2011-10-07  Pavel Feldman  <pfeldman@chromium.org>

        Web Inspector: add Elements and Network panels to the compilation
        https://bugs.webkit.org/show_bug.cgi?id=69604

        Reviewed by Yury Semikhatsky.

        * inspector/compile-front-end.sh:
        * inspector/front-end/BreakpointsSidebarPane.js:
        (WebInspector.XHRBreakpointsSidebarPane.prototype._addButtonClicked):
        (WebInspector.XHRBreakpointsSidebarPane.prototype._labelClicked):
        * inspector/front-end/DOMAgent.js:
        * inspector/front-end/DOMBreakpointsSidebarPane.js:
        * inspector/front-end/DataGrid.js:
        (WebInspector.DataGrid.prototype._startEditingConfig):
        * inspector/front-end/Drawer.js:
        * inspector/front-end/ElementsPanel.js:
        (WebInspector.ElementsPanel.prototype._hideSearchHighlights):
        (WebInspector.ElementsPanel.prototype.updateBreadcrumb):
        (WebInspector.ElementsPanel.prototype.updateBreadcrumbSizes.collapseDimmed):
        (WebInspector.ElementsPanel.prototype.updateBreadcrumbSizes):
        (WebInspector.ElementsPanel.prototype._registerShortcuts):
        * inspector/front-end/ElementsTreeOutline.js:
        (WebInspector.ElementsTreeElement.prototype._startEditingAttribute):
        (WebInspector.ElementsTreeElement.prototype._startEditingTextNode):
        (WebInspector.ElementsTreeElement.prototype._startEditingTagName):