@@ -1,3 +1,12 @@
+2011-10-07  Vsevolod Vlasov  <vsevik@chromium.org>
+
+        Web Inspector: Element highlighting does not highlight padding/border/margin for inline elements.
+        https://bugs.webkit.org/show_bug.cgi?id=69558
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/DOMNodeHighlighter.cpp:
+
 2011-10-07  Mario Sanchez Prada  <msanchez@igalia.com>
 
         [GTK] Don't expose objects with unknown role on GTK
